Added more details in code. Fixed node modules for grunticon

--- a/public/scss/_lightbox.scss
+++ b/public/scss/_lightbox.scss
@@ -14,10 +14,14 @@
 		@include opacity(1);
 	}
 
-	#close {
-		display: block;
-		color: white;
-		text-align: center;
+	.wrapper {
+		position: relative;
+	}
+
+	.close {
+		position: absolute;
+		top: 1em;
+		right: 1em;
 	}
 }
 
